Tutorial added and minor corrections

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,10 +56,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameClass.cs" />
     <Compile Include="Assets\Scripts\GameConfig.cs" />
+    <Compile Include="Assets\Scripts\Delay.cs" />
     <Compile Include="Assets\Scripts\ButtonConfig.cs" />
     <Compile Include="Assets\Scripts\SolveBoard.cs" />
     <Compile Include="Assets\Scripts\BlockClass.cs" />
-    <Compile Include="Assets\Scripts\Delay.cs" />
+    <Compile Include="Assets\Scripts\Tutorial.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
